force-app/main/user-communications/objects/Message__c/Message__c.object-meta.xml
<CustomObject>
    <label>Message</label>
    <nameField>
        <displayFormat>MSG-{000000000}</displayFormat>
        <label>Message Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Messages</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>