force-app/main/user-communications/objects/Message__c/fields/ContentDocumentLinkId__c.field-meta.xml
<CustomField>
    <fullName>ContentDocumentLinkId__c</fullName>
    <description>Id of ContentDocumentLink where LinkedEntityId is Conversation parent</description>
    <label>ContentDocumentLinkId</label>
    <length>20</length>
    <type>Text</type>
</CustomField>