force-app/main/user-communications/objects/Message__c/fields/DocId__c.field-meta.xml
<CustomField>
    <fullName>DocId__c</fullName>
    <label>DocId</label>
    <length>18</length>
    <type>Text</type>
</CustomField>