force-app/main/user-communications/objects/Message__c/fields/Is_Confidential__c.field-meta.xml
<CustomField>
    <fullName>Is_Confidential__c</fullName>
    <defaultValue>false</defaultValue>
    <label>Is Confidential</label>
    <type>Checkbox</type>
</CustomField>