force-app/main/user-communications/objects/Message__c/fields/Message_Content__c.field-meta.xml
<CustomField>
    <fullName>Message_Content__c</fullName>
    <label>Message Сontent</label>
    <length>500</length>
    <type>LongTextArea</type>
</CustomField>